[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.0"
reqwest = "0.12.5"
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
